--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   font-family: "Courier New", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background: #355C7D;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #C06C84, #6C5B7B, #355C7D);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #C06C84, #6C5B7B, #355C7D);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #FFFFFF;
+  background-image: linear-gradient(225deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
 }
 
